--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "name",
-  "version": "1.0.0",
+  "name": "gulpdmitriy",
+  "version": "1.6.5",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npx gulp",
+    "build": "npx build"
   },
   "browserslist": [
     "last 2 versions"
